--- a/main.html
+++ b/main.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Accessible Portfolio</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <header role="banner">
+    <h1 role="heading" aria-level="1">My Portfolio</h1>
+    <nav role="navigation">
+      <ul role="list">
+        <li role="listitem"><a href="#home">Home</a></li>
+        <li role="listitem"><a href="#about">About</a></li>
+        <li role="listitem"><a href="#projects">Projects</a></li>
+        <li role="listitem"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main role="main">
+    <section id="home">
+      <h2 role="heading" aria-level="2">Welcome to My Portfolio</h2>
+      <p>This is my portfolio showcasing my work and achievements.</p>
+      <img src="profile.jpg" alt="My Profile" role="img">
+    </section>
+
+    <section id="about">
+      <h2 role="heading" aria-level="2">About Me</h2>
+      <p>I am a web developer with expertise in HTML, CSS, and JavaScript.</p>
+    </section>
+
+    <section id="projects">
+      <h2 role="heading" aria-level="2">Projects</h2>
+      <ul role="list">
+        <li role="listitem">Compressor Decompressor</li>
+        <li role="listitem">Text Editor</li>
+        <li role="listitem">Solarised Compressed Air Car</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2 role="heading" aria-level="2">Contact Me</h2>
+      <p>Feel free to reach out to me via navneetchugh15@gmail.com or +918699699015.</p>
+    </section>
+  </main>
 </body>
 
 </html>
